--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "adevent_of_code2017"
+name = "advent_of_code2017"
 version = "0.1.0"
 authors = ["Fredrik Jansson <frjansso@cisco.com>"]
 
 [dependencies]
+combine = "*"
